EKS_service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-service
spec:
  selector:
    app: eks-app
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
