EKS_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: issuer
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /2048
        pathType: Prefix
        backend:
          service:
            name: eks-service
            port:
              number: 3000
